k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pan-vault
  namespace: cde
  labels:
    app: pan-vault
spec:
  type: ClusterIP
  selector:
    app: pan-vault
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
